--- a/src/App.scss
+++ b/src/App.scss
@@ -9,9 +9,9 @@
   // flex-direction: column;
   // justify-content: space-around;
   // align-items: space-around;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  // display: grid;
+  // grid-template-columns: 1fr;
+  // grid-template-rows: 1fr;
 }
 
 .card {
