Futher edits to styles

--- a/src/components/CarouselCard/CarouselCard.module.scss
+++ b/src/components/CarouselCard/CarouselCard.module.scss
@@ -5,6 +5,9 @@
     @apply flex flex-col;
 
     .product {
+        &__image {
+            width: 50%;
+        }
         &__info {
             @apply flex flex-row justify-around;
         }
