--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,6 +13,8 @@ header::before {
 }
 
 .header {
+	display: flex;
+	justify-content: center;
 	&__title {
 		position: relative;
 		color: #ffffff;
