--- a/src/App.scss
+++ b/src/App.scss
@@ -5,13 +5,9 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: space-around;
-  // align-items: space-around;
-  // display: grid;
-  // grid-template-columns: 1fr;
-  // grid-template-rows: 1fr;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .card {
