Struggling to style

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,10 @@
+@use '../../base-imports.scss' as bi;
 header::before {
+	@apply bg-brick-900;
 	background-image: url("../../assets/eleonore-kemmel-K2Rrug-aWAg-unsplash.jpg");
 	content: "";
 	width: 100%;
-	height: 10vh;
+
 	background-size: cover;
 	position: absolute;
 	top: 0px;
@@ -11,6 +13,36 @@ header::before {
 	left: 0px;
 	opacity: 0.1;
 }
+
+@media (max-width: 425px) {
+	header::before {
+		height: 3rem;
+	}
+}
+
+@media (max-width: 628px) {
+	header::before {
+		height: 2rem;
+	}
+}
+
+@media (max-width: 764px) {
+	header::before {
+		height: 5rem;
+	}
+ }
+
+@media (min-width: 768px) {
+	header::before {
+		height: 10rem;
+	}
+}
+
+@media (min-width: 992px) {
+	header::before {
+		height: 10rem;
+	}
+ }
 
 .header {
 	display: flex;
