--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,18 @@
 @use '_base-imports.scss';
 :root {
-  @apply bg-slate-300 text-sage-900;
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  @apply bg-timberwolf-400 text-sage-900;
+  //font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  @apply text-mono-950;
+  font-weight: 500;;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+@apply text-black-500;
 }
 
 body {
@@ -29,33 +29,19 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+  @apply bg-cork-600 text-white border-r-8 px-2 py-5 rounded-lg;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+@apply border-x-cork-600;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
