Adding linking for the Header and Product Cards

--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -24,7 +24,7 @@
 	}
 
 	.product__price {
-		@apply text-green-500 font-bold text-xl mt-2;
+		@apply font-bold text-xl mt-2;
 	}
 
 	.product__price-badge {
